--- a/package.json
+++ b/package.json
@@ -1,21 +1,30 @@
 {
   "name": "smart-brains",
+  "homepage": "https://Khalil-BM.github.io/Smart-Detection",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "clarifai": "^2.9.1",
+    "clarifai-nodejs-grpc": "^7.0.3",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-tilt": "^0.1.4",
+    "react-tsparticles": "^1.18.11",
+    "tachyons": "^4.12.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
